plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.busuu.app'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Model Mapper
	implementation 'org.modelmapper:modelmapper:2.1.1'

	// Validation
	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'

	// Gson
	implementation 'com.google.code.gson:gson:2.11.0'

	// JJWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'

	// JJWT IMPL
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'

	// JJWT Jackson
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// HTTP Client 5
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'

	// Logging
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	implementation 'ch.qos.logback:logback-classic'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.3'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// Cloudinary
	implementation 'com.cloudinary:cloudinary-http44:1.39.0'

	// Commons IO
	implementation 'commons-io:commons-io:2.16.1'

	// Flyway
	implementation("org.flywaydb:flyway-core:11.9.0")
	implementation("org.flywaydb:flyway-mysql:11.9.0")

}

tasks.named('test') {
	useJUnitPlatform()
}
